# novapad

./: .gitignore  CHANGELOG.md  CMakeLists.txt  PKGBUILD  README.md
cmake/: version.h.in
docs/: LANGUAGE_SUPPORT.md
src/: CMakeLists.txt  main.cpp
src/core/: application.cpp  application.h  command_line_parser.cpp  command_line_parser.h  globals.cpp  globals.h  single_instance.cpp  single_instance.h
src/editor/: auto_completer.cpp  auto_completer.h  bracket_matcher.cpp  bracket_matcher.h  code_editor_widget.cpp  code_editor_widget.h  code_folding_manager.cpp  code_folding_manager.h  language_manager.cpp  language_manager.h  line_number_area.cpp  line_number_area.h  minimap_widget.cpp  minimap_widget.h  syntax_highlighter.cpp  syntax_highlighter.h
src/extensions/: extension.cpp  extension.h  extension_api.cpp  extension_api.h  extension_loader.cpp  extension_loader.h  extension_server.cpp  extension_server.h
src/languages/base/: c_family_base.cpp  c_family_base.h  language_support_base.cpp  language_support_base.h
src/languages/definitions/: c_language.cpp  c_language.h  cpp_language.cpp  cpp_language.h  cs_language.cpp  cs_language.h  go_language.cpp  go_language.h  html_css_language.cpp  html_css_language.h  javascript_language.cpp  javascript_language.h  kotlin_language.cpp  kotlin_language.h  markdown_language.cpp  markdown_language.h  perl_language.cpp  perl_language.h  php_language.cpp  php_language.h  python_language.cpp  python_language.h  rust_language.cpp  rust_language.h  sql_language.cpp  sql_language.h  swift_language.cpp  swift_language.h
src/languages/support/: advanced_syntax_highlighter.cpp  advanced_syntax_highlighter.h  language_registry.cpp  language_registry.h  language_system_initializer.cpp  language_system_initializer.h
src/resources/: novapad.qrc
src/search/: advanced_search_dock.cpp  advanced_search_dock.h  search_helpers.cpp  search_helpers.h  search_instance.cpp  search_instance.h  search_replace_dialog.cpp  search_replace_dialog.h  search_result_model.cpp  search_result_model.h  search_worker.cpp  search_worker.h
src/sessions/: backup_service.cpp  backup_service.h  persistent_cache.cpp  persistent_cache.h  session_manager.cpp  session_manager.h
src/settings/: novapad_settings.cpp  novapad_settings.h  shortcut_manager.cpp  shortcut_manager.h
src/themes/: color_scheme.cpp  color_scheme.h  theme_manager.cpp  theme_manager.h
src/ui/: editor_tab_widget.cpp  editor_tab_widget.h  icon_provider.cpp  icon_provider.h  main_window.cpp  main_window.h  status_bar_manager.cpp  status_bar_manager.h  svg_icon_engine.cpp  svg_icon_engine.h  toolbar_manager.cpp  toolbar_manager.h  top_editor_container.cpp  top_editor_container.h
src/ui/dialogs/: about_dialog.cpp  about_dialog.h  encoding_chooser_dialog.cpp  encoding_chooser_dialog.h  go_to_line_dialog.cpp  go_to_line_dialog.h  indentation_dialog.cpp  indentation_dialog.h  preferences_dialog.cpp  preferences_dialog.h  run_command_dialog.cpp  run_command_dialog.h
src/ui/dock/: file_tree_dock.cpp  file_tree_dock.h  output_dock.cpp  output_dock.h  terminal_dock.cpp  terminal_dock.h
src/utils/: encoding_detector.cpp  encoding_detector.h  file_utils.cpp  file_utils.h  platform_utils.cpp  platform_utils.h  text_operations.cpp  text_operations.h
support/: novapad.desktop
tests/: CMakeLists.txt  test_color_scheme.cpp  test_encoding_detector.cpp  test_language_manager.cpp  test_persistent_cache.cpp  test_search_helpers.cpp  test_text_operations.cpp
translations/: novapad_en.ts
